@@ -37,6 +37,8 @@ Additions:
 * PlayerHUD:
 	- GetIndex
 	- GetLayout
+* Room:
+	- TriggerOutput(RoomEventOutput GroupIdx)
 * ModCallbacks:
 	- MC_PRE_PLAYER_POCKET_ITEMS_SWAP(EntityPlayer player)
 		Triggers when the player swaps their pocket items using the action drop button (even if they are empty).
@@ -76,6 +78,7 @@ Additions:
 	- DoorMask
 	- WaterClipFlag
 	- PlayerHUDLayout
+	- RoomEventOutput
 * Room:
 	- GetWallColor()
 * Isaac:
